# curve25519-java

./: README.md  build.gradle  gradle.properties
.github/workflows/: release.yaml
android/: build.gradle
common/src/main/java/org/whispersystems/curve25519/: BaseJavaCurve25519Provider.java  Curve25519.java  Curve25519KeyPair.java  Curve25519Provider.java  NoSuchProviderException.java  SecureRandomProvider.java  VrfSignatureVerificationFailedException.java
common/src/main/java/org/whispersystems/curve25519/java/: LabelSetException.java  Sha512.java  crypto_verify_32.java  curve_sigs.java  elligator.java  fe_0.java  fe_1.java  fe_add.java  fe_cmov.java  fe_copy.java  fe_cswap.java  fe_frombytes.java  fe_invert.java  fe_isequal.java  fe_isnegative.java  fe_isnonzero.java  fe_isreduced.java  fe_mont_rhs.java  fe_montx_to_edy.java  fe_mul.java  fe_mul121666.java  (+48 more)
java/: build.gradle
java/src/jmh/java/org/whispersystems/curve25519/: JavaCurve25519ProviderBenchmark.java
java/src/main/java/org/whispersystems/curve25519/: JCESecureRandomProvider.java  JCESha512Provider.java  JavaCurve25519Provider.java  NativeCurve25519Provider.java  OpportunisticCurve25519Provider.java
java/src/test/java/org/whispersystems/curve25519/: JavaCurve25519ProviderTest.java  JavaCurve25519Test.java
jni/: CMakeLists.txt
native/: CMakeLists.txt  curve25519.c
native/ed25519/tests/: internal_fast_tests.c  internal_slow_tests.c
native/toolchains/: win32-x86-64.toolchain  win32-x86.toolchain
tests/src/main/java/org/whispersystems/curve25519/: Curve25519ProviderTest.java  HexBin.java
